--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -63,6 +63,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\CameraMovement.cs" />
     <Compile Include="Assets\Desert Environment\Example\AutoMoveAndRotate.cs" />
     <Compile Include="Assets\Enemy.cs" />
     <Compile Include="Assets\Granade.cs" />
